# Little-Monk-Window

./: .gitignore  .project-identity  CODEBASE.md  LittleMonkWindow.code-workspace  README.md  implementation_plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs  quote.rs  scheduler.rs  settings.rs  tray.rs  window.rs
src/components/: MonkSprite.svelte  PetWindow.svelte  QuoteBubble.svelte  ReactionBubble.svelte  SettingsWindow.svelte
src/components/settings/: BellSettings.svelte  ContentManager.svelte
src/lib/: audio.ts  geometry.ts  quote.ts  settings.ts  spriteSlicer.ts  tauriApi.ts
